--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>it.andrea.parent</groupId>
-		<artifactId>it.andrea.parent</artifactId>
-		<version>1.0.0</version>
-	</parent>
-
 	<groupId>it.andrea</groupId>
 	<artifactId>reader-writer-api</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -20,6 +14,10 @@
 		<spring-boot.version>2.0.2.RELEASE</spring-boot.version>
 		<apache-poi.version>3.17</apache-poi.version>
 		<apache-commons-io>1.3.2</apache-commons-io>
+		<java.version>1.8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
 
 	<dependencyManagement>
