Added feature to create reports from typed list

--- a/src/test/resources/report.properties
+++ b/src/test/resources/report.properties
@@ -50,6 +50,27 @@ csv1.sheet1.field3.fieldLength=3
 csv1.sheet1.field3.fillerCharacter= 
 csv1.sheet1.field3.padType=right
 
+### SIMPLE CSV WITH TYPED OBJECT ############
+csv1_typed_obj.filename=simple_csv_persons.csv
+csv1_typed_obj.sheet1.name=Sheet1
+csv1_typed_obj.sheet1.header=HEADER_BY_LABELS
+csv1_typed_obj.sheet1.separator=;
+csv1_typed_obj.sheet1.typedDataClass=it.andrea.reader.writer.api.utility.model.Person
+csv1_typed_obj.sheet1.field1.position=1
+csv1_typed_obj.sheet1.field1.label=Name
+csv1_typed_obj.sheet1.field1.fieldName=name
+csv1_typed_obj.sheet1.field1.dataType=string
+csv1_typed_obj.sheet1.field2.position=2
+csv1_typed_obj.sheet1.field2.label=Birth Date
+csv1_typed_obj.sheet1.field2.fieldName=birthDate
+csv1_typed_obj.sheet1.field2.dataType=date
+csv1_typed_obj.sheet1.field2.inputDateFormat=yyyy-MM-dd
+csv1_typed_obj.sheet1.field2.outputDateFormat=dd/MM/yyyy
+csv1_typed_obj.sheet1.field3.position=3
+csv1_typed_obj.sheet1.field3.label=Salary
+csv1_typed_obj.sheet1.field3.fieldName=salary
+csv1_typed_obj.sheet1.field3.dataType=number
+
 
 ### EXCEL ############
 excel1.filename=registry_matches.xls
