--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
 	<artifactId>reader-writer-api</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
+	<parent>
+		<groupId>it.beergash.parent</groupId>
+		<artifactId>it.beergash.parent</artifactId>
+		<version>1.0.0</version>
+	</parent>
+
 	<name>reader-writer-api</name>
 	<description>File Reader and writer API</description>
 	<url>http://maven.apache.org</url>
