--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<junit.version>4.12</junit.version>
 		<mockito.version>2.19.0</mockito.version>
 
+		<itextpdf.version>5.5.13.1</itextpdf.version>
 	</properties>
 
 	<dependencyManagement>
@@ -71,6 +72,11 @@
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>${apache-poi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.itextpdf</groupId>
+			<artifactId>itextpdf</artifactId>
+			<version>${itextpdf.version}</version>
 		</dependency>
 		<!-- TEST -->
 		<dependency>
