renamed main package name

--- a/src/test/resources/loading_files.properties
+++ b/src/test/resources/loading_files.properties
@@ -11,7 +11,7 @@ test.sheet1.field4=4,Maturity Date,date,dd/MM/yyyy, ,
 test_map_obj.type=csv
 test_map_obj.header=true
 test_map_obj.sheet1.sheetName=test_map_obj
-test_map_obj.sheet1.targetClassName=it.andrea.reader.writer.api.utility.model.Person
+test_map_obj.sheet1.targetClassName=it.beergash.reader.writer.api.utility.model.Person
 test_map_obj.sheet1.separator=;
 test_map_obj.sheet1.field1=1,Account,string, , ,name
 test_map_obj.sheet1.field2=2,Trade Id,string, , ,lastName
@@ -53,7 +53,7 @@ sample2sheets.sheet2.matcher1=3,eq,F
 ### SAMPLE CSV 2 SHEETS WITH REWRITER #############
 csvrewriter.type=csv
 csvrewriter.description=csv_to_rewrite
-csvrewriter.rewriter.className=it.andrea.reader.writer.api.utility.model.CsvRewriterExample
+csvrewriter.rewriter.className=it.beergash.reader.writer.api.utility.model.CsvRewriterExample
 csvrewriter.sheet1.sheetName=sheetMale
 csvrewriter.sheet1.separator=,
 csvrewriter.sheet1.field1=1,Name,string, , ,
@@ -82,7 +82,7 @@ simple_fixed_pos.sheet1.field5=38-56,Residence City,string, , ,
 ########### FIXED POSITION MAPPED TO OBJECT #############
 simple_fixed_pos_map_obj.type=fixed_position
 simple_fixed_pos_map_obj.sheet1.sheetName=simple_fixed_pos_sh1
-simple_fixed_pos_map_obj.sheet1.targetClassName=it.andrea.reader.writer.api.utility.model.Person
+simple_fixed_pos_map_obj.sheet1.targetClassName=it.beergash.reader.writer.api.utility.model.Person
 simple_fixed_pos_map_obj.sheet1.field1=1-13,Name,string, , ,name
 simple_fixed_pos_map_obj.sheet1.field2=14-26,Surname,string, , ,lastName
 simple_fixed_pos_map_obj.sheet1.field3=27-27,Gender,string, , ,gender
@@ -116,7 +116,7 @@ test_excel_map_obj.sheet1.field4=4,Date,date,yyyyMMdd, ,
 test_excel_map_obj.sheet1.field5=5,City,string, , ,
 
 test_excel_map_obj.sheet2.header=true
-test_excel_map_obj.sheet2.targetClassName=it.andrea.reader.writer.api.utility.model.Person
+test_excel_map_obj.sheet2.targetClassName=it.beergash.reader.writer.api.utility.model.Person
 test_excel_map_obj.sheet2.sheetName=persons
 test_excel_map_obj.sheet2.field1=1,Name,string, , ,name
 test_excel_map_obj.sheet2.field2=2,Last Name,string, , ,lastName
