--- a/src/test/resources/report.properties
+++ b/src/test/resources/report.properties
@@ -55,7 +55,7 @@ csv1_typed_obj.filename=simple_csv_persons.csv
 csv1_typed_obj.sheet1.name=Sheet1
 csv1_typed_obj.sheet1.header=HEADER_BY_LABELS
 csv1_typed_obj.sheet1.separator=;
-csv1_typed_obj.sheet1.typedDataClass=it.andrea.reader.writer.api.utility.model.Person
+csv1_typed_obj.sheet1.typedDataClass=it.beergash.reader.writer.api.utility.model.Person
 csv1_typed_obj.sheet1.field1.position=1
 csv1_typed_obj.sheet1.field1.label=Name
 csv1_typed_obj.sheet1.field1.fieldName=name
