--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>it.andrea</groupId>
+	<groupId>it.beergash</groupId>
 	<artifactId>reader-writer-api</artifactId>
 	<version>1.0.0</version>
 
